tests/ui/pattern/issue-106862.stderr
error[E0532]: expected tuple struct or tuple variant, found variant `FooB`
  --> $DIR/issue-106862.rs:16:9
   |
LL |     FooB { x: i32, y: i32 }
   |     ----------------------- `FooB` defined here
...
LL |         FooB(a, b) => println!("{} {}", a, b),
   |         ^^^^^^^^^^ help: use struct pattern syntax instead: `FooB { x: a, y: b }`

error[E0532]: expected tuple struct or tuple variant, found variant `FooB`
  --> $DIR/issue-106862.rs:22:9
   |
LL |     FooB { x: i32, y: i32 }
   |     ----------------------- `FooB` defined here
...
LL |         FooB(x, y) => println!("{} {}", x, y),
   |         ^^^^^^^^^^ help: use struct pattern syntax instead: `FooB { x, y }`

error[E0532]: expected tuple struct or tuple variant, found variant `FooA`
  --> $DIR/issue-106862.rs:28:9
   |
LL |     FooA { opt_x: Option<i32>, y: i32 },
   |     ----------------------------------- `FooA` defined here
...
LL |         FooA(Some(x), y) => println!("{} {}", x, y),
   |         ^^^^^^^^^^^^^^^^ help: use struct pattern syntax instead: `FooA { opt_x: Some(x), y }`

error[E0532]: expected tuple struct or tuple variant, found variant `FooB`
  --> $DIR/issue-106862.rs:34:9
   |
LL |     FooB { x: i32, y: i32 }
   |     ----------------------- `FooB` defined here
...
LL |         FooB(a, _, _) => println!("{}", a),
   |         ^^^^^^^^^^^^^ help: use struct pattern syntax instead: `FooB { x: a, y: _ }`

error[E0532]: expected tuple struct or tuple variant, found variant `FooB`
  --> $DIR/issue-106862.rs:40:9
   |
LL |     FooB { x: i32, y: i32 }
   |     ----------------------- `FooB` defined here
...
LL |         FooB() => (),
   |         ^^^^^^ help: use struct pattern syntax instead: `FooB { x, y }`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0532`.
